--- a/templates/index.html
+++ b/templates/index.html
@@ -105,17 +105,17 @@ background-image: url('images/sea.jpg');
         <br style="clear:both;">
         </section><br>
             <input type="submit" name="anything_submit" value="Submit" onclick="loader()">
-            </form>
 
         <p>If there is an error try to input the values again and retry</p>
                 </div>
                 <div class="column">
                     <h3>In order to highlight a particular hote/apartment in the plot, enter name of hotel/apartment as it appears in:</h3>
                     <label for="bookingname">Booking.com</label><br>
-                    <input type="text" id="bookingname" name="bookingname"></label><br>
+                    <input type="text" id="bookingname" name="bookingname" value="juan bravo"></label><br>
                     <br>
                     <label for="tripadvisorname">Tripadvisor.com</label><br>
-                    <input type="text" id="tripadvisorname" name="tripadvisorname"></label><br>
+                    <input type="text" id="tripadvisorname" name="tripadvisorname" value="juan bravo"></label><br>
+            </form>
                 </div>
             </div>
             </div>
