--- a/templates/result.html
+++ b/templates/result.html
@@ -24,6 +24,7 @@
 <body>
 
 <h2>Results</h2>
+<h4>All places with no ratings are ignored, places that are sold out can't be plotted because they don't have a price</h4>
 <div class="row">
 <div class="column" style="background-color:#fc641d; font-weight:bold;">
 <h2>Booking</h2>
