--- a/templates/result.html
+++ b/templates/result.html
@@ -19,6 +19,12 @@
   display: table;
   clear: both;
 }
+#notfoundtripadvisor {
+    display: none;
+}
+#notfoundbooking {
+    display: none;
+}
 .alert {
   padding: 20px;
   background-color: #f44336;
@@ -50,15 +56,17 @@ body {
 <div class="row">
 <div class="column" style="background-color:#fc641d; font-weight:bold;">
 <h2>Booking</h2>
-
-<h3 id="notfoundbooking" style="background-color: white; font-weight:bold;"> </h3>
+<div id="notfoundbooking" class="alert"> 
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+    <strong>Warning!</strong>Property not found on Booking.com, make sure you didn't make a typo, that your property is available for those dates and that your property is available on that site
+</div>
 <p>For dates {{ indate }} to {{ outdate }}, looking for property name "{{ propertyname[0] }}"</p>
 <img src= {{ path1 }} alt="Booking">
 <h3>Number of sold out properties: {{ bookingsoldout }} with an average rating: {{ bookingrating }}</h3>
 </div>
 <div class="column" style="background-color:#fc641d; font-weight:bold;">
 <h2>Tripadvisor</h2>
-<div class="alert">
+<div id="notfoundtripadvisor" class="alert" >
 <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
 <strong>Warning!</strong>Property not found on Tripadvisor, make sure you didn't make a typo, that your property is available for those dates and that your property is available on that site"
 </div>
@@ -75,10 +83,10 @@ function notfound() {
         alert("We didn't find your property on either website, please very that the credentials you inputed are correct and that your property is not sold out for those dates, and run the webscraper again");
     }
     else if (notfoundbooking=='True'){
-        document.getElementById("notfoundbooking").innerHTML = "Property not found on Booking.com, make sure you didn't make a typo, that your property is available for those dates and that your property is available on that site";
+        document.getElementById("notfoundbooking").style.display='block';
     }
     else if (notfoundtripadvisor=='True'){
-        document.getElementById("notfoundtripadvisor").show
+        document.getElementById("notfoundtripadvisor").style.display='block';
     }
 }
 </script>
